--- a/JZirebiec_MazeGame/Config/DefaultEngine.ini
+++ b/JZirebiec_MazeGame/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/StarterContent/Maps/LVL1.LVL1
+GameDefaultMap=/Game/StarterContent/Maps/LVL1.LVL1
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/JZirebiec_MazeGame")
