cześć zad 9, poprawienie sterowania

--- a/JZirebiec_MazeGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/JZirebiec_MazeGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -123,7 +123,6 @@ LastLevel=/Game/StarterContent/Maps/LVL1
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/StarterContent/Maps/LVL1.LVL1:PersistentLevel.LVL1
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -222,7 +221,7 @@ DirectionalLight.RayTracing=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
-StaticMeshActor.Mobile=False
+StaticMeshActor.Mobile=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableGet.Events=True
@@ -534,6 +533,8 @@ TriggerBox.Cooking=True
 TriggerBox.Replication=True
 TriggerBox.Input=True
 TriggerBox.Actor=True
+StaticMeshActor.MaterialParameters=True
+StaticMeshActor.HLOD=True
 
 [RootWindow]
 ScreenPosition=X=1229.000 Y=173.000
@@ -1446,6 +1447,7 @@ GameMapsSettings=True
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush=
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 
 [MaterialEditor]
 PrimType=1
@@ -1524,6 +1526,7 @@ ShowUnusedLayers=True
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 
 [DetailCategoriesAdvanced]
 Brush.Geometry=False
